--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Ckmillian – Home</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
+  <link rel="stylesheet" href="style2.css">
 </head>
 <body class="bg-white text-gray-900 dark:bg-gray-900 dark:text-white">
 
