--- a/index.html
+++ b/index.html
@@ -78,5 +78,6 @@
   <!-- ===== JS ===== -->
   <script src="script.js"></script>
   <script>lucide.createIcons();</script>
+  <script src="script2.js"></script>
 </body>
 </html>
