--- a/index.html
+++ b/index.html
@@ -1,83 +1,76 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ckmillian – Home</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/lucide@latest"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style2.css">
 </head>
-<body class="bg-white text-gray-900 dark:bg-gray-900 dark:text-white">
+<body>
 
-  <!-- ===== Navigation ===== -->
-  <nav class="flex justify-between items-center px-8 py-4 bg-yellow-500 shadow-md">
-    <h1 class="text-2xl font-bold">Ckmillian</h1>
-    <ul class="hidden md:flex gap-8 font-medium">
-      <li><a href="index.html" class="hover:text-blue-600 flex items-center gap-1"><i data-lucide="home"></i> Home</a></li>
-      <li><a href="philosophy.html" class="hover:text-blue-600 flex items-center gap-1"><i data-lucide="book-open"></i> Philosophy</a></li>
-      <li><a href="security.html" class="hover:text-blue-600 flex items-center gap-1"><i data-lucide="shield"></i> Security</a></li>
-      <li><a href="literacy.html" class="hover:text-blue-600 flex items-center gap-1"><i data-lucide="edit-3"></i> Literacy</a></li>
-      <li><a href="morality.html" class="hover:text-blue-600 flex items-center gap-1"><i data-lucide="heart"></i> Morality</a></li>
-      <li><a href="resources.html" class="hover:text-blue-600 flex items-center gap-1"><i data-lucide="globe"></i> Resources</a></li>
-    </ul>
-    <!-- Theme + Lang Toggle -->
-    <div class="flex items-center gap-4">
-      <button id="theme-toggle" class="p-2 rounded-lg bg-gray-200 dark:bg-gray-700">
-        <i data-lucide="moon"></i>
-      </button>
-      <select id="lang-toggle" class="p-2 rounded-md border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800">
-        <option value="en">EN</option>
-        <option value="fr">FR</option>
-        <option value="sw">SW</option>
-        <option value="lg">LG</option>
-        <option value="es">ES</option>
-        <option value="ja">JA</option>
-        <option value="zh">ZH</option>
-        <option value="ar">AR</option>
-      </select>
-    </div>
+<header>
+  <div class="logo">Ckmillian</div>
+
+  <nav class="nav-links">
+    <a href="index.html" class="active" data-translate="home">Home</a>
+    <a href="literacy.html" data-translate="literacy">Literacy</a>
+    <a href="morality.html" data-translate="morality">Morality</a>
+    <a href="security.html" data-translate="security">Security</a>
+    <a href="resources.html" data-translate="resources">Resources</a>
   </nav>
 
-  <!-- ===== Hero Section ===== -->
-  <section class="relative">
-    <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1920&q=80"
-         alt="Tech background"
-         class="absolute inset-0 w-full h-full object-cover opacity-40">
-    <div class="relative z-10 text-center py-24 px-6">
-      <h1 class="text-5xl font-extrabold mb-4 animate-bounce">Welcome to Ckmillian</h1>
-      <p class="text-xl max-w-2xl mx-auto">Exploring literacy, morality, philosophy & security for a safer and smarter digital age.</p>
-      <a href="resources.html" class="mt-6 inline-block px-6 py-3 bg-blue-600 text-white font-semibold rounded-xl shadow-lg hover:bg-blue-700">Get Started</a>
+  <div class="controls">
+    <select id="lang-toggle">
+      <option value="en">English</option>
+      <option value="fr">Français</option>
+      <option value="sw">Swahili</option>
+      <option value="lg">Luganda</option>
+      <option value="es">Español</option>
+      <option value="ja">日本語</option>
+      <option value="zh">中文</option>
+      <option value="ar">العربية</option>
+    </select>
+
+    <label class="switch" aria-label="Toggle light/dark theme">
+      <input type="checkbox" id="themeSwitch"/>
+      <span class="slider"></span>
+    </label>
+
+    <div class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation">
+      <span></span><span></span><span></span>
     </div>
-  </section>
+  </div>
+</header>
 
-  <!-- ===== Feature Sections ===== -->
-  <section class="grid md:grid-cols-2 gap-12 px-12 py-20 items-center">
-    <div>
-      <h2 class="text-3xl font-bold mb-4">Our Philosophy</h2>
-      <p class="text-lg mb-6">We believe in blending ethics and technology, ensuring that digital progress is grounded in humanity and purpose.</p>
-      <a href="philosophy.html" class="text-blue-600 font-semibold hover:underline">Read More →</a>
-    </div>
-    <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=800&q=80" alt="Philosophy" class="rounded-2xl shadow-lg">
-  </section>
+<section class="hero">
+  <h1 class="typing">Ckmillian</h1>
+  <p>“Holistic wisdom shapes modern resilience.” – Inspired by Sun Tzu</p>
+  <img src="images/hero.jpg" alt="Digital guidance illustration" class="hero-img">
+</section>
 
-  <section class="grid md:grid-cols-2 gap-12 px-12 py-20 items-center">
-    <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=800&q=80" alt="Security" class="rounded-2xl shadow-lg">
-    <div>
-      <h2 class="text-3xl font-bold mb-4">Security First</h2>
-      <p class="text-lg mb-6">Your digital life deserves protection. Learn about cybersecurity, online privacy, and safe practices to stay ahead of risks.</p>
-      <a href="security.html" class="text-blue-600 font-semibold hover:underline">Discover Security →</a>
-    </div>
-  </section>
+<section class="about">
+  <h2 data-translate="mission">Our Mission</h2>
+  <p data-translate="missionText">
+    We empower individuals to engage confidently and responsibly in the digital sphere by providing clear, research-backed guidance on literacy, ethical conduct, and robust security practices.
+  </p>
+</section>
 
-  <!-- ===== Footer ===== -->
-  <footer class="bg-gray-900 text-white text-center py-6">
-    <p>© 2025 Ckmillian. Built with care and vision.</p>
-  </footer>
+<section class="grid">
+  <h2 data-translate="preview">Preview Our Sections</h2>
+  <div class="grid-items">
+    <a href="literacy.html" class="btn"><img src="images/literacy.jpg" alt="Literacy"><span data-translate="literacy">Literacy</span></a>
+    <a href="morality.html" class="btn"><img src="images/morality.jpg" alt="Morality"><span data-translate="morality">Morality</span></a>
+    <a href="security.html" class="btn"><img src="images/security.jpg" alt="Security"><span data-translate="security">Security</span></a>
+    <a href="resources.html" class="btn"><img src="images/resources.jpg" alt="Resources"><span data-translate="resources">Resources</span></a>
+  </div>
+</section>
 
-  <!-- ===== JS ===== -->
-  <script src="script.js"></script>
-  <script>lucide.createIcons();</script>
-  <script src="script2.js"></script>
+<footer>
+  <p>&copy; 2025 Ckmillian</p>
+  <p>Designed by Mudde Carl Maximillian Kintu</p>
+</footer>
+
+<script src="script2.js"></script>
 </body>
 </html>
